--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pandas
-numpy
-scikit-learn
-matplotlib
-seaborn
-imbalanced-learn
-notebook
+numpy>=1.23,<2.0
+pandas>=1.5,<3.0
+matplotlib>=3.7,<4.0
+seaborn>=0.12,<1.0
 
+scikit-learn>=1.3,<1.5
+scipy>=1.10,<1.13
+scikit-learn-extra>=0.3,<0.4
+imbalanced-learn>=0.11,<0.13
